--- a/muddery/web/webclient/webclient/views/honours.html
+++ b/muddery/web/webclient/webclient/views/honours.html
@@ -14,22 +14,24 @@
             <button id="button_queue" type="button" class="btn btn-default">QUEUE UP</button>
             <button id="button_quit" type="button" class="btn btn-default" style="display: none;">QUIT QUEUE</button>
             <div><br></div>
-        	<table id="tab_honours">
-        		<thead>
-        			<tr>
-        			    <th id="view_ranking">RANKING</th>
-        				<th id="view_name">NAME</th>
-        				<th id="view_honour">HONOUR</th>
-        			</tr>
-        		</thead>
-        		<tbody id="character_items">
-        			<tr class="template">
-        			    <td class="character_ranking"></td>
-        				<td class="character_name"></td>
-        				<td class="character_honour"></td>
-        			</tr>
-        		</tbody>
-        	</table>
+            <div id="honours_wrapper">
+				<table id="tab_honours">
+					<thead>
+						<tr>
+							<th id="view_ranking">RANKING</th>
+							<th id="view_name">NAME</th>
+							<th id="view_honour">HONOUR</th>
+						</tr>
+					</thead>
+					<tbody id="character_items">
+						<tr class="template">
+							<td class="character_ranking"></td>
+							<td class="character_name"></td>
+							<td class="character_honour"></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
         </div>
 
 		<script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
