--- a/muddery/web/webclient/webclient/views/inventory.html
+++ b/muddery/web/webclient/webclient/views/inventory.html
@@ -11,27 +11,29 @@
     </head>
     <body>
         <div id="box_inventory">
-        	<table id="tab_inventory">
-        		<thead>
-        			<tr>
-        				<th id="view_name">NAME</th>
-        				<th id="view_number">NUM</th>
-        				<th id="view_desc">DESC</th>
-        			</tr>
-        		</thead>
-        		<tbody id="inventory_items">
-        			<tr class="template">
-        				<td>
-        					<div class="obj_icon">
-        						<img class="img_icon" src="" />
-        					</div>
-        					<a class="obj_name"></a>
-        				</td>
-        				<td class="obj_number"></td>
-        				<td class="obj_desc"></td>
-        			</tr>
-        		</tbody>
-        	</table>
+			<div id="inventory_wrapper">
+                <table id="tab_inventory">
+                    <thead>
+                        <tr>
+                            <th id="view_name">NAME</th>
+                            <th id="view_number">NUM</th>
+                            <th id="view_desc">DESC</th>
+                        </tr>
+                    </thead>
+                    <tbody id="inventory_items">
+                        <tr class="template">
+                            <td>
+                                <div class="obj_icon">
+                                    <img class="img_icon" src="" />
+                                </div>
+                                <a class="obj_name"></a>
+                            </td>
+                            <td class="obj_number"></td>
+                            <td class="obj_desc"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
 
         <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
