--- a/muddery/web/webclient/webclient/views/quests.html
+++ b/muddery/web/webclient/webclient/views/quests.html
@@ -11,26 +11,28 @@
     </head>
     <body>
         <div id="box_quests">
-        	<table id="tab_quests">
-        		<thead>
-        			<tr>
-        				<th id="view_name">NAME</th>
-        				<th id="view_desc">DESC</th>
-        				<th id="view_objective">OBJECTIVE</th>
-        			</tr>
-        		</thead>
-        		<tbody id="quest_list">
-        			<tr class="template">
-        				<td>
-        					<a class="quest_name"></a>
-        				</td>
-        				<td class="quest_desc"></td>
-        				<td class="quest_objective">
-        					<p class="template"></p>
-        				</td>
-        			</tr>
-        		</tbody>
-        	</table>
+            <div id="quests_wrapper">
+				<table id="tab_quests">
+					<thead>
+						<tr>
+							<th id="view_name">NAME</th>
+							<th id="view_desc">DESC</th>
+							<th id="view_objective">OBJECTIVE</th>
+						</tr>
+					</thead>
+					<tbody id="quest_list">
+						<tr class="template">
+							<td>
+								<a class="quest_name"></a>
+							</td>
+							<td class="quest_desc"></td>
+							<td class="quest_objective">
+								<p class="template"></p>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
         </div>
 
         <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
