--- a/muddery/web/webclient/webclient/views/skills.html
+++ b/muddery/web/webclient/webclient/views/skills.html
@@ -11,25 +11,27 @@
     </head>
     <body>
 		<div id="box_skills">
-			<table id="tab_skills">
-				<thead>
-					<tr>
-						<th id="view_name">NAME</th>
-						<th id="view_desc">DESC</th>
-					</tr>
-				</thead>
-				<tbody id="skill_list">
-					<tr class="template">
-						<td>
-							<div class="skill_icon">
-								<img class="img_icon" src="" />
-							</div>
-							<a class="skill_name"></a>
-						</td>
-						<td class="skill_desc"></td>
-					</tr>
-				</tbody>
-			</table>
+			<div id="skills_wrapper">
+                <table id="tab_skills">
+                    <thead>
+                        <tr>
+                            <th id="view_name">NAME</th>
+                            <th id="view_desc">DESC</th>
+                        </tr>
+                    </thead>
+                    <tbody id="skill_list">
+                        <tr class="template">
+                            <td>
+                                <div class="skill_icon">
+                                    <img class="img_icon" src="" />
+                                </div>
+                                <a class="skill_name"></a>
+                            </td>
+                            <td class="skill_desc"></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 		</div>
 
         <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
