--- a/templates/example_cn/web/webclient_overrides/webclient/views/skills.html
+++ b/templates/example_cn/web/webclient_overrides/webclient/views/skills.html
@@ -11,27 +11,29 @@
     </head>
     <body>
 		<div id="box_skills">
-			<table id="tab_skills">
-				<thead>
-					<tr>
-						<th id="view_name">名称</th>
-						<th id="view_name">耗能</th>
-						<th id="view_desc">描述</th>
-					</tr>
-				</thead>
-				<tbody id="skill_list">
-					<tr class="template">
-						<td>
-							<div class="skill_icon">
-								<img class="img_icon" src="" />
-							</div>
-							<a class="skill_name"></a>
-						</td>
-						<td class="skill_mp"></td>
-						<td class="skill_desc"></td>
-					</tr>
-				</tbody>
-			</table>
+			<div id="skills_wrapper">
+				<table id="tab_skills">
+					<thead>
+						<tr>
+							<th id="view_name">名称</th>
+							<th id="view_name">耗能</th>
+							<th id="view_desc">描述</th>
+						</tr>
+					</thead>
+					<tbody id="skill_list">
+						<tr class="template">
+							<td>
+								<div class="skill_icon">
+									<img class="img_icon" src="" />
+								</div>
+								<a class="skill_name"></a>
+							</td>
+							<td class="skill_mp"></td>
+							<td class="skill_desc"></td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
 		</div>
 
         <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
