--- a/templates/cn/worlddata/editor/templates/relative_form.html
+++ b/templates/cn/worlddata/editor/templates/relative_form.html
@@ -74,6 +74,7 @@
             </fieldset>
             <input type="hidden" name="_record" value="{{ record }}" />
             <input type="hidden" name="_page" value="{{ page }}" />
+            <input type="hidden" name="_area" value="{{ area }}" />
             <div class="submit-row">
                 {% if can_delete %}
                 <input type="submit" name="_delete" value="删除" class="delete-box" />
