--- a/muddery/web/webclient/webclient/views/main.html
+++ b/muddery/web/webclient/webclient/views/main.html
@@ -139,6 +139,7 @@
                         <iframe id="frame_quick_login" class="content_frame" src="./quick_login.html"></iframe>
                         <iframe id="frame_login" class="content_frame" src="./login.html"></iframe>
                         <iframe id="frame_register" class="content_frame" src="./register.html"></iframe>
+                        <iframe id="frame_password" class="content_frame" src="./password.html"></iframe>
                         <iframe id="frame_select_char" class="content_frame" src="./select_char.html"></iframe>
                         <iframe id="frame_scene" class="content_frame" src="./scene.html"></iframe>
                         <iframe id="frame_information" class="content_frame" src="./information.html"></iframe>
@@ -197,6 +198,9 @@
                                 <li>
                                     <a id="view_logout" onclick="commands.doLogout()" class="first-dropdown-item">Logout</a>
                                 </li>
+                                <li>
+                                    <a id="view_password" onclick="controller.showContent('password')" class="dropdown-item">Password</a>
+                                </li>
                             </ul>
                         </li>
                         <li id="tab_system" role="presentation" class="dropup">
@@ -207,6 +211,9 @@
                                 </li>
                                 <li>
                                     <a id="view_unpuppet" onclick="commands.unpuppetCharacter()" class="dropdown-item">Unpuppet</a>
+                                </li>
+                                <li>
+                                    <a id="view_password_puppet" onclick="controller.showContent('password')" class="dropdown-item">Password</a>
                                 </li>
                             </ul>
                         </li>
