Modify the framework of the webclient.

--- a/muddery/web/webclient/webclient/views/quick_login.html
+++ b/muddery/web/webclient/webclient/views/quick_login.html
@@ -28,6 +28,8 @@
         </div>
         
         <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../controllers/base_controller.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../controllers/muddery_quick_login.js" defer="defer" type="text/javascript" charset="utf-8"></script>
         <script src="../client/frames.js" defer="defer" type="text/javascript" charset="utf-8"></script>
         <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
     </body>
