--- a/muddery/web/webclient/webclient/views/main.html
+++ b/muddery/web/webclient/webclient/views/main.html
@@ -232,6 +232,8 @@
             </div>
         </div>
 
+        <script src="../controllers/base_controller.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../controllers/muddery_main.js" defer="defer" type="text/javascript" charset="utf-8"></script>
         <script src="../client/frames.js" defer="defer" type="text/javascript" charset="utf-8"></script>
         <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
     </body>
