Modify the framework of the webclient.

--- a/muddery/web/webclient/webclient/views/main.html
+++ b/muddery/web/webclient/webclient/views/main.html
@@ -137,7 +137,7 @@
                 <div class="panel panel-default">
                     <div id="tab_content" class="panel-body">
                         <iframe id="frame_quick_login" class="content_frame" src="./quick_login.html"></iframe>
-                        <iframe id="frame_login" class="content_frame" src="./login.html"></iframe>
+                        <div id="frame_login" class="content_frame"></div>
                         <iframe id="frame_register" class="content_frame" src="./register.html"></iframe>
                         <iframe id="frame_password" class="content_frame" src="./password.html"></iframe>
                         <iframe id="frame_select_char" class="content_frame" src="./select_char.html"></iframe>
@@ -234,7 +234,9 @@
 
         <script src="../controllers/base_controller.js" defer="defer" type="text/javascript" charset="utf-8"></script>
         <script src="../controllers/muddery_main.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../controllers/muddery_login.js" defer="defer" type="text/javascript" charset="utf-8"></script>
         <script src="../client/frames.js" defer="defer" type="text/javascript" charset="utf-8"></script>
+        <script src="../client/frameworks.js" defer="defer" type="text/javascript" charset="utf-8"></script>
         <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
     </body>
 </html>
