Add the webpack.

--- a/muddery/web/webclient/webclient/views/combat.html
+++ b/muddery/web/webclient/webclient/views/combat.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
 
         <!--CSS style sheet -->
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="../libs/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/combat.css" />
     </head>
