--- a/templates/legend/web/webclient_overrides/webclient/views/main.html
+++ b/templates/legend/web/webclient_overrides/webclient/views/main.html
@@ -7,7 +7,7 @@
         <title>Muddery Webclient</title>
 
         <!--CSS style sheet -->
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/bootstrap.min.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="../libs/bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
 
         <!-- Importing the online jQuery javascript library -->
@@ -20,7 +20,7 @@
         <script src="../libs/bootstrap.min.js"></script>
 
         <!-- settings -->
-        <script src="../client/settings.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../settings.js" type="text/javascript" charset="utf-8"></script>
 
 		<!-- languages -->
         <script src="../lang/en-us/strings.js" type="text/javascript" charset="utf-8"></script>
