Modify the webclient.

--- a/muddery/web/webclient/webclient/css/new_char.css
+++ b/muddery/web/webclient/webclient/css/new_char.css
@@ -1,8 +1,8 @@
 
-#popup_footer {
+#frame_new_char #new_char_popup_footer {
     text-align: center;
 }
 
-.editbox {
+#frame_new_char .editbox {
     display: inline;
 }
