--- a/muddery/web/webclient/webclient/views/new_char.html
+++ b/muddery/web/webclient/webclient/views/new_char.html
@@ -1,31 +1,11 @@
-<!DOCTYPE html>
-<html lang="en-us">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0, user-scalable=no" />
-        <meta charset="utf-8" />
-
-        <!--CSS style sheet -->
-        <link rel="stylesheet" type="text/css" media="screen" href="../libs/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/new_char.css" />
-    </head>
-    <body>
-        <div class="modal-header">
-            <button type="button" id="close_box" class="close">×</button>
-            <h4 id="view_header" class="modal-title">Set Character</h4>
-        </div>
-        <div class="modal-body">
-			<span id="view_name">Name</span>
-            <input id="char_name" type="text" placeholder="name" aria-describedby="basic-addon2" autocomplete="off" class="form-control editbox" />
-        </div>
-        <div id="popup_footer" class="modal-footer">
-            <button id="button_create" type="button" class="btn btn-default">Create</button>
-        </div>
-
-        <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/base_controller.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/muddery_new_char.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/frames.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-    </body>
-</html>
+<div class="modal-header">
+	<button type="button" id="new_char_close_box" class="close">×</button>
+	<h4 id="new_char_view_header" class="modal-title">Set Character</h4>
+</div>
+<div class="modal-body">
+	<span id="new_char_view_name">Name</span>
+	<input id="new_char_name" type="text" placeholder="name" aria-describedby="basic-addon2" autocomplete="off" class="form-control editbox" />
+</div>
+<div id="new_char_popup_footer" class="modal-footer">
+	<button id="new_char_button_create" type="button" class="btn btn-default">Create</button>
+</div>
