--- a/muddery/web/webclient/webclient/views/select_char.html
+++ b/muddery/web/webclient/webclient/views/select_char.html
@@ -1,30 +1,10 @@
-<!DOCTYPE html>
-<html lang="en-us">
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximun-scale=1.0, user-scalable=no" />
-        <meta charset="utf-8" />
-
-        <!--CSS style sheet -->
-        <link rel="stylesheet" type="text/css" media="screen" href="../libs/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/webclient.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../css/select_char.css" />
-    </head>
-    <body>
-        <div id="box_character">
-            <div id="view_character">Characters</div>
-            <div id="character_items">
-                <div class="character_item template">
-        			<a class="char_name"></a>
-        			<button type="button" class="button_delete">×</button>
-        		</div>
-        	</div>
-        	<button id="button_new_char" type="button" class="btn btn-default">New Character</button>
-        </div>
-
-        <script src="../libs/jquery-3.2.1.min.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/base_controller.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../controllers/muddery_select_char.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/frames.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-        <script src="../client/importer.js" defer="defer" type="text/javascript" charset="utf-8"></script>
-    </body>
-</html>
+<div id="box_character">
+	<div id="char_view_character">Characters</div>
+	<div id="character_items">
+		<div class="character_item template">
+			<a class="char_name"></a>
+			<button type="button" class="button_delete">×</button>
+		</div>
+	</div>
+	<button id="char_button_new_char" type="button" class="btn btn-default">New Character</button>
+</div>
